--- a/CSS/styles2.css
+++ b/CSS/styles2.css
@@ -33,9 +33,18 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: white;
+    color: white; 
     font-weight: bold;
     padding: 10px;
+    background-color: transparent; 
+    transition: background-color 0.3s ease; 
+}
+
+nav ul li a:hover {
+    background-color: #88b097; 
+    color: #fff; 
+    padding: 10px 15px; 
+    border-radius: 4px;
 }
 
 
