--- a/CSS/styles2.css
+++ b/CSS/styles2.css
@@ -39,8 +39,23 @@ nav ul li a {
 }
 
 
+a:hover {
+    color: #fff;
+    background-color: #6b8e23;
+    padding: 2px 4px;
+    border-radius: 4px;
+}
+a { 
+    color: #6b8e23; 
+    text-decoration: none; 
+}
 
-
+nav ul li a:hover { 
+    background-color: #88b097;
+    color: #fff; 
+    padding: 10px 15px; 
+    border-radius: 4px; 
+}
 
 
 main {
