--- a/CSS/styles2.css
+++ b/CSS/styles2.css
@@ -31,8 +31,17 @@ nav ul li {
     margin-right: 20px;
 }
 
+nav ul li a { 
+    text-decoration: none; 
+    color: white; 
+    font-weight: bold; 
+    padding: 10px; 
+}
 
-
+a { 
+    color: #6b8e23;
+    text-decoration: none; 
+}
 
 
 
